mType/tests/testFiles/error/error/invalidInterfaceNameSpecialChar.mt
interface My!Interface {
    function test(): void;
}
